Revisi Push Swagger endpoint rest
